[tool.poetry]
name = "dvf_maintenance"
version = "0.1.0"
description = ""
authors = ["NyxAether <contact.nyxhemera@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pandas = "=1.3.5"
numpy = "^1.23.5"
tqdm = "^4.64.1"
joblib = "^1.2.0"
pyarrow = "^10.0.0"
matplotlib = "^3.7.3"
scipy = "^1.11.2"
seaborn = "^0.12.2"
black = "^23.12.1"
mypy = "^1.8.0"
pylint = "^3.0.3"
flake8 = "^7.0.0"
pandas-stubs = "^2.1.4.231227"

[tool.poetry.dev-dependencies]
ipykernel = "^6.17.1"


[tool.isort]
profile = "black"

[tool.poetry.scripts]
dvf-tool = "dvf_maintenance.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
